--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,5 +1,9 @@
+.quill {
+  height: 75vh;
+}
+
 .container {
-  padding: 0 2rem;
+  padding: 1rem 20rem;
 }
 
 .main {
@@ -15,7 +19,7 @@
 .footer {
   display: flex;
   flex: 1;
-  padding: 2rem 0;
+  padding: 1rem 0;
   border-top: 1px solid #eaeaea;
   justify-content: center;
   align-items: center;
